# oh-no-mcp-server

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
evals/: __init__.py  mcp_config.json  similarity_metrics.py  test_claude_code_cli.py  test_mcp_evaluations.py
evals/fixtures/: expected_text_review.txt  leetcode_binary_search_expected_feedback.txt  leetcode_binary_search_optimal.py  leetcode_contains_duplicate_expected_feedback.txt  leetcode_contains_duplicate_slow.py  leetcode_group_anagrams_expected_feedback.txt  leetcode_group_anagrams_slow.py  leetcode_longest_substring_expected_feedback.txt  leetcode_longest_substring_slow.py  leetcode_max_subarray_expected_feedback.txt  leetcode_max_subarray_slow.py  leetcode_merge_intervals_expected_feedback.txt  leetcode_merge_intervals_slow.py  leetcode_product_array_expected_feedback.txt  leetcode_product_array_slow.py  leetcode_stock_expected_feedback.txt  leetcode_stock_slow.py  leetcode_two_sum_expected_feedback.txt  leetcode_two_sum_slow.py  leetcode_valid_anagram_expected_feedback.txt  leetcode_valid_anagram_slow.py  leetcode_valid_palindrome_expected_feedback.txt  leetcode_valid_palindrome_slow.py  sample_code.py
src/oh_no_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_init.py  test_server.py
