[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-no-mcp-server"
version = "0.1.0"
description = "MCP server for code performance reviews"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
oh-no-mcp = "oh_no_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

eval = [
    "sentence-transformers>=2.2.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
